examples/working-with-lists/transcript.txt
/*
 * Copyright (C) 2007-2020 Artima, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Automatically generated Scala interpreter transcript from:
 *
 * Programming in Scala (Fifth Edition)
 * by Martin Odersky, Lex Spoon, Bill Venners, and Frank Sommers
 *
 * http://booksites.artima.com/programming_in_scala_5ed
 */


scala> val List(a, b, c) = fruit
                           ^
       error: not found: value fruit

scala> val a :: b :: rest = fruit
                            ^
       error: not found: value fruit

scala> List(1, 2, 3).flatten
                     ^
       error: No implicit view available from Int => scala.collection.IterableOnce[B].

scala> var sum = 0
sum: Int = 0

scala> List(1, 2, 3, 4, 5).foreach(sum += _)

scala> sum
res2: Int = 15

scala>    def flattenLeft[T](xss: List[List[T]]) =
             xss.foldLeft(List[T]())(_ ::: _)
       
         def flattenRight[T](xss: List[List[T]]) =
             xss.foldRight(List[T]())(_ ::: _)

flattenLeft: [T](xss: List[List[T]])List[T]
flattenRight: [T](xss: List[List[T]])List[T]

scala> def flattenRight[T](xss: List[List[T]]) =
           xss.foldRight(List())(_ ::: _)
           xss.foldRight(List())(_ ::: _)
                                 ^
On line 2: error: type mismatch;
        found   : List[T]
        required: List[Nothing]

scala>   msort(less)(xs)
         ^
       error: not found: value msort
               ^
       error: not found: value less
                     ^
       error: not found: value xs

